examples/errors/WrongType.bkf
layer foo:
| *_ => []

alias a = {foo} -- chords must only contain chords (or other lower types)
alias b = [foo] -- sequences must only contain sequences (or other lower types)
alias c = {b} -- chords cannot contain sequences

alias d: Layer = [] -- oops, the annotation disagrees!

alias e = fun (g: Chord): Keycode => g -- The return type doesn't match the returned value
alias f(g: Chord): Keycode = g -- The return type doesn't match the returned value

-- the left hand side of the -> operator flips the subtyping relation around
alias g: Chord -> Keycode = fun (x: Sequence) => "x" -- compiles
alias g: Sequence -> Keycode = fun (x: Chord) => "x" -- does not compile
